--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "nano-ipfs-store": "^0.1.3",
     "truffle-contract": "^3.0.0",
     "vue": "^2.4.2",
     "vue-router": "^2.7.0"
